--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VARIABLES DE ENTORNO 
 
-VITE_API_TAREA=http://localhost:4000/tareas
+# VITE_API_TAREA=http://localhost:4000/tareas
+VITE_API_TAREA=http://localhost:4001/apitareas/tareas
